--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           go-version: 1.19.x
 
+      - name: Install devtools
+        run: make install-devtools
+
       - name: Lint
         run: make lint
 
@@ -74,6 +77,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19.x
+
+      - name: Install devtools
+        run: make install-devtools
 
       - name: Run test
         run: make test
