--- a/.github/workflows/on-push-to-main.yml
+++ b/.github/workflows/on-push-to-main.yml
@@ -43,6 +43,9 @@ jobs:
         with:
           go-version: 1.19.x
 
+      - name: Install devtools
+        run: make install-devtools
+
       - name: Lint
         run: make lint
 
